# magpylib

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RotateExample.py  TODO.md  ___temp.py  __init__.py  __temp3.txt  _dev_info.txt  _feature_discussion.txt  _info.txt  _temp.py  _temp01.py  _temp02.py  _temp03.py  _temp99.npy  _temp_feature_discussion.txt  _temp_tests.py  appveyor.yml  azure-pipelines.yml  data_test_cy_cases.npy  data_test_cy_cases_inp.npy  data_test_cy_cases_inp2.npy  discussion.txt  noxfile.py  pyproject.toml  pytest.ini  q  setup.py  temp.py  temp_data.npy  (+6 more)
.binder/: postBuild  start
.binder/labconfig/: default_setting_overrides.json
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml  question_magnetics.md  question_magnetics.yaml
.github/workflows/: cd.yml  ci.yml  codeql.yml  python-app.yml
Binder/: requirements.txt
Examples/: plot_example.py
_lib/: mathLibPrivate.py  mathLibPublic.py
_lib/_base/: __init__.py  _base.py
_lib/_collection/: __init__.py  _collection.py
_lib/_fields/: Current_CircularLoop.py  Current_Line.py  PM_Cylinder.py  PM_Sphere.py  __init__.py
_lib/classes/: base.py  collection.py  currents.py  magnets.py
_lib/fields/: Current_CircularLoop.py  Current_Line.py  Moment_Dipole.py  PM_Cube.py  PM_Cylinder.py  PM_Sphere.py
current/: __init__.py  _circular.py  _line.py
docs/: Makefile  README.md  _changelog.md  _code_of_conduct.md  _contributing.md  _license.md  bibliography.bib  changelog_link.md  conf.py  index.md  index.rst  make.bat  requirements.txt
docs/_codes/: doc_collection_display.py  doku_collection_display.py  examples_basic.py  examples_coil.py  examples_collection.py  examples_field1.py  examples_getBHv.py  examples_paths.py  examples_position_orientation.py  examples_sensor.py
docs/_pages/: 0_documentation.md  0_documentation.rst  0_fundamentals.md  0_summary.rst  10_contguide.md  1_fundamentals.md  1_how2install.md  1_how2install.rst  2_gettingStarted.md  2_guideExamples.md  2_guideExamples.rst  3_MATLAB.md  3_MATLAB.rst  4_contguide.md  4_contguide.rst  5_devguide.md  8_applications.rst  8_physics.md  9_contguide.md  9_physics.md  9_physics.rst  API_reference.md  changelog_.md  docu_classes.md  docu_field_comp.md  docu_graphic_styles.md  docu_pos_ori.md  gettingStarted.md  how2install.md  how2install.rst  notebook_doc_test.md  page_01_introduction.md  page_03_installation.md  page_07_physics_computation.md  page_09_contguide.md  reso_changelog.md  reso_code_of_conduct.md  reso_contributing.md  reso_get_started.md  reso_getting_started.md  (+6 more)
docs/_static/: custom.css  flyout.js  switcher.json
docs/auto_examples/: example1.rst  example1_codeobj.pickle  example2.rst  example2_codeobj.pickle  index.rst  plot_example1.py.md5  plot_example1.rst  plot_example1_codeobj.pickle  plot_example2.py.md5  plot_example2.rst  plot_example2_codeobj.pickle  plot_field_streamline.py  plot_field_streamline.py.md5  plot_field_streamline.rst  plot_field_streamline_codeobj.pickle  sg_execution_times.rst
docs/examples/: 01_core_functionality.md  01_fundamentals.md  02_display_features.md  02_graphic_output.md  03_advanced.md  03_advanced_examples.md  03_advanced_features.md  04_application_examples.md  examples_01_complex_forms.md  examples_02_paths.md  examples_03_collections.md  examples_04_custom_source.md  examples_05_backend_canvas.md  examples_06_facet.md  examples_06_triangle.md  examples_07_triangularmesh.md  examples_11_backends_canvas.md  examples_12_styles.md  examples_13_3d_models.md  examples_14_adding_cad_model.md  examples_14_animation.md  examples_15_animation.md  examples_21_compound.md  examples_21_compound_class.md  examples_21_custom_source.md  examples_22_adding_cad_model.md  examples_22_fem_interpolation.md  examples_22_field_interpolation.md  examples_23_compound_class.md  examples_30_coil_field_lines.md  examples_30_field_of_a_coil.md  examples_31_end_of_shaft.md  examples_32_fem_interpolation.md  gallery.md  plot_01_basic_functionality.md  plot_02_display_backends.md  plot_03_display_styling.md  plot_04_animate_paths.md  plot_04_streamlines_in_2d_symmetry.md  plot_05_modeling_a_coil.md  (+6 more)
eexamples/: README.rst
examples/: 01 - Showcase.py  README.md  README.rst  README.txt  example1.py  gxPackage_v03.py  plotConfig_v18.py  plot_01_basic_functionality.py  plot_02_display_backends.py  plot_03_display_styling.py  plot_04_streamlines_in_2d_symmetry.py  plot_05_modeling_a_coil.py  plot_06_animate_paths.py  plot_07_custom_source.py  plot_basic.py  plot_coil.py  plot_display.py  plot_example1.py  plot_field_pv_streamlines.py  plot_field_streamline.py  plot_field_streamtube.py  plot_test.py
magnet/: __init__.py  _cube.py  _cylinder.py  _sphere.py
magpylib/: __init__.py  appveyor.yml
magpylib/_lib/: __init__.py  config.py  default_classes.py  default_utils.py  defaults.py  (+11 more)
magpylib3/: __init__.py
math/: __init__.py  _anglesfromaxis.py  _axisfromangles.py  _randomaxis.py  _rotateposition.py
tests/: README.md  __init__.py  conftest.py  test_BHMJ_level.py  test_BaseGeo.py  test_BaseTransform.py  test_BaseTransform_temp.py  test_Box.py  test_Collection.py  test_Coumpound_setters.py  test_CustomSource.py  test_Cylinder.py  test_Dipole.py  test_Math.py  test_MathVector.py  test_Sensor.py  test_Sphere.py  test__missing_optional_modules.py  test_base.py  test_collection.py  test_config.py  test_core.py  test_core_field_functions.py  test_core_misc.py  test_core_physics_consistency.py  test_default_utils.py  test_defaults.py  test_dipole_moment_testing.py  test_display.py  test_display_matplotlib.py  test_display_mayavi.py  test_display_plotly.py  test_display_plotly_pixel_field.py  test_display_pyvista.py  test_display_utility.py  test_elliptics.py  test_exception_handling.py  test_exceptions.py  test_fieldWrapper_getBHv.py  test_field_BH_box.py  (+62 more)
(+527 files in other folders)
