[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "magpylib"
dynamic = ["version"]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.8",
    "matplotlib>=3.6",
    "plotly>=5.16",
    ]
requires-python = ">=3.10"
authors = [
    {name = "Michael Ortner", email = "magpylib@gmail.com"},
]
maintainers = [
    {name = "Alexandre Boisselet", email = "alexabois+magpylib@gmail.com"}
]
description = "Free Python3 package to compute magnetic fields."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["magnetism", "physics", "analytical", "electromagnetic", "magnetic-field", "B-field"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
code_style = [
    "pre-commit",
]
docs = [
    "pydata-sphinx-theme",
    "sphinx==7.3",
    "sphinx-design",
    "sphinx-thebe",
    "sphinx-favicon",
    "sphinx-gallery",
    "sphinx-copybutton",
    "myst-nb",
    "pandas",
    "numpy-stl",
    "pyvista",
    "magpylib-material-response",
    "magpylib-force",
]
test = [
    "tox>=4.11",
    "pytest>=7.4",
    "pylint>3.0",
    "coverage",
    "pandas",
    "pyvista",
    "ipywidgets", # for plotly FigureWidget
    "imageio[tifffile, ffmpeg]",
    "jupyterlab",
]
binder = [
    "jupytext",
    "jupyterlab>=3.2",
    "jupyterlab-myst",
]

[project.urls]
Documentation = "https://magpylib.readthedocs.io/en/latest/"
Repository = "https://github.com/magpylib/magpylib.git"
"Bug Tracker" = "https://github.com/magpylib/magpylib/issues"
Changelog = "https://github.com/magpylib/magpylib/blob/master/CHANGELOG.md"


[tool.pytest.ini_options]
# backend_pyvista.py file imports pyvista on top level which messes with the namespace when running
# doctests with the missing_pyvista test
addopts = ["--doctest-modules", "--ignore-glob=*backend_pyvista.py"]
testpaths = ["magpylib", "tests"]

[tool.isort]
# add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"